feat: writeのバッチ処理を追加
